[Fix] Fixed compile errors and an edge case with height 1